force-app/main/default/objects/ADM_Release_Stamp_Batch_ID__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Copy</fullName>
                <default>true</default>
                <label>Copy</label>
            </value>
            <value>
                <fullName>Copy All</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Transfer All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>