force-app/main/default/objects/ADM_Release_Stamp_Batch_ID__c/fields/Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_ID__c</fullName>
    <label>Batch ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>