force-app/main/default/objects/ADM_Release_Stamp_Batch_ID__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <label>Release</label>
    <referenceTo>ADM_Release__c</referenceTo>
    <relationshipLabel>Release Stamp Batch IDs</relationshipLabel>
    <relationshipName>Release_Stamp_Batch_IDs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>