force-app/main/default/objects/ADM_Release_Stamp_Batch_ID__c/fields/Release_From__c.field-meta.xml
<CustomField>
    <fullName>Release_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release From</label>
    <referenceTo>ADM_Release__c</referenceTo>
    <relationshipLabel>Release Stamp Batch IDs (Release From)</relationshipLabel>
    <relationshipName>Release_Stamp_Batch_IDs_From</relationshipName>
    <type>Lookup</type>
</CustomField>