force-app/main/default/objects/ADM_Release_Stamp_Batch_ID__c/fields/Release_To__c.field-meta.xml
<CustomField>
    <fullName>Release_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release To</label>
    <referenceTo>ADM_Release__c</referenceTo>
    <relationshipLabel>Release Stamp Batch IDs (Release To)</relationshipLabel>
    <relationshipName>Release_Stamp_Batch_IDs_To</relationshipName>
    <type>Lookup</type>
</CustomField>